--- a/src/styles/NotificationSettingsWidget.css
+++ b/src/styles/NotificationSettingsWidget.css
@@ -8,7 +8,7 @@
   position: fixed;
   bottom: 172px;
   right: 24px;
-  z-index: 9988;
+  z-index: 9990;
   width: 56px; height: 56px;
   border: none;
   border-radius: 50%;
